new:add admin panel

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,14 @@
 @import './base.css';
+@import './fontawesome/css/all.min.css';
+
+::-webkit-scrollbar {
+  display: none;
+}
+
+body {
+  overflow: -moz-scrollbars-none;
+  -ms-overflow-style: none;
+}
 
 #app {
   display: flex;
